--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
         <h1>This is a Header</h1>
         <p>This is a paragraph</p>
         <p>This is another paragraph</p>
+        <br>
+        <h3>This is a lesser Header</h3>
     </body>
 </html>
